--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 #main{
     position: relative;
     overflow: hidden;
+    background-color: #0a3cce;
 }
 @font-face {
     font-family: a;
@@ -131,4 +132,143 @@ body {
     width: 90%;
     font-size: 4vw;
     color: #dadada69;
+}
+#page3{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-color: #0a3cce;
+}
+#page3>canvas{
+    max-height: 100vh;
+    max-width: 100vw;
+    position: relative;
+}
+#page4{
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: column;
+    font-family: a;
+    height: 100vh;
+    width: 100vw;
+    background-color: #0a3cce;
+    position: relative;
+    padding: 0vw 8vw;
+    color: white;
+}
+#page4>h2{
+   
+    margin-bottom: 2vw;
+    font-weight: 100;
+}
+#page4>h1{
+  
+    font-weight: 100;
+    line-height: 1.3;
+
+    width: 90%;
+    font-size: 4vw;
+    color: #dadada69;
+}
+#page5{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-color: #0a3cce;
+}
+#page5>canvas{
+    max-height: 100vh;
+    max-width: 100vw;
+    position: relative;
+}
+#page6{
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: column;
+    font-family: a;
+    height: 100vh;
+    width: 100vw;
+    background-color: #0a3cce;
+    position: relative;
+    padding: 0vw 8vw;
+    color: white;
+}
+#page6>h2{
+   
+    margin-bottom: 2vw;
+    font-weight: 100;
+}
+#page6>h1{
+  
+    font-weight: 100;
+    line-height: 1.3;
+
+    width: 90%;
+    font-size: 4vw;
+    color: #dadada69;
+}
+#page7{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-color: #0a3cce;
+}
+#page7>canvas{
+    max-height: 100vh;
+    max-width: 100vw;
+    position: relative;
+}
+.page7-cir{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 9;
+    height: 47vh;
+    width: 25vw;
+    /* background-color: red; */
+    border-radius: 50%;
+    border: 0.1px solid white;
+
+}
+.page7-cir-inner{
+    height: 70%;
+    width: 70%;
+    background-color: transparent;
+    border-radius: 50%;
+    border: 0.1px solid white;
+}
+#page8{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-color: #0a3cce;
+}
+.page8-bottom{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    bottom: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.page8-bottom>h1{
+    color: white;
+    margin-bottom: 2vw;
+    font-size: 5vw;
+    font-weight: 100;
+}
+.page8-bottom>button{
+    padding:20px 30px;
+    border-radius: 50px;
+    border: none;
+    color:#0b48ed;
+    background-color: white;
 }
