--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 #page1{
     height: 100vh;
     width: 100vw;
-    background-color: red;
+    /* background-color: red; */
     position: relative;
 }
 #page1>video{
