completed till page14

--- a/style.css
+++ b/style.css
@@ -272,3 +272,310 @@ body {
     color:#0b48ed;
     background-color: white;
 }
+#page9{
+    display: flex;
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-color: #0a3cce;
+}
+.left9{
+    height: 100%;
+    width: 30%;
+    /* background-color: red; */
+    position: relative;
+}
+.right9{
+    height: 100%;
+    width: 70%;
+    /* background-color: magenta; */
+    position: relative;
+}
+.left9>h1{
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    transform: translateY(-50%);
+    font-size: 5vw;
+    font-weight: 100;
+    color: white;
+    line-height: 1;
+}
+#right9-center{
+    height: 50%;
+    width: 85%;
+   left: 5%;
+    border-radius: 10px;
+    position: absolute;
+    top: 40%;
+    transform: translateZ(-50%);
+    background-image: url(https://thisismagma.com/wp-content/uploads/2023/04/magma.wp2.cubdev.com-home-1.jpeg);
+    background-size: cover;
+}
+#page10{
+    /* display: flex;
+    align-items:flex-end;
+    justify-content: center;
+    flex-direction: column; */
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background-color: #0a3cce;
+}
+#page10-right{
+    width: 60%;
+    height: 100%;
+    /* border: 2px solid black; */
+    color: white;
+    position: relative;
+    left: 30%;
+}
+.page10-1{
+    height: 25%;
+    width: 90%;
+    margin: 4vw 4vw;
+}
+.page10-1>p{
+    font-size: 1.5vw;
+    font-weight: 100;
+    color: rgba(255,255,255,.8);
+}
+
+
+
+
+
+
+
+#page11{
+    position: relative;
+    height: 150vh;
+    width: 100vw;
+    background-color: #fff;
+    font-family: a;
+    
+}
+#page11>h1{
+    position: absolute;
+    top: 5%;
+    left: 10%;
+    font-size: 4vw;
+    color: #000;
+    font-weight: 100;
+}
+.page11-inner{
+    display: flex;
+    top: 18%;
+    position: relative;
+    margin-bottom: 2vw;
+    height:17%;
+    width: 100%;
+    /* background-color: greenyellow; */
+}
+.left11{
+    position: relative;
+    height: 100%;
+    width: 40%;
+    left: 7%;
+    border-radius: 1.3vw;
+    overflow: hidden;
+}
+.left11>img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+.right11{
+    padding-top: 5vw;
+    color: #000;
+    left: 50%;
+    position: absolute;
+    height: 100%;
+    width: 40%;
+}
+.right11>h4{
+    font-weight: 100;
+    font-size: 1vw;
+}
+.right11>h1{
+    font-size: 2vw;
+    font-weight: 100;
+    color:rgba(0, 0, 0, 0.696);
+}
+#button11{
+    
+    height: 100%;
+    width: 100%;
+    /* background-color: red; */
+}
+
+#button11>button{
+    padding:20px 30px;
+    /* border-radius: 50px; */
+    border: 3px solid black;
+    color:red;
+    background-color: white;
+    font-size: 1vw;
+    text-align: center;
+}
+.glow-on-hover {
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:hover:before {
+    opacity: 1;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: white;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
+
+#page12{
+    position: relative;
+    height: 110vh;
+    width: 100vw;
+    background-color:#0a3cce;
+    font-family: a;
+}
+.page12-inner{
+    position: absolute;
+    top: 40%;
+    right:20%;
+    color: white;
+    font-family: a;
+
+
+}
+.page12-inner>h1{
+    font-size: 5vw;
+    font-weight: 100;
+}
+.page12-inner>p{
+    font-size: 1.2vw;
+}
+#page13{
+    position: relative;
+    height: 50vh;
+    width: 100vw;
+    background-color:black;
+    font-family: a;
+    color: white;
+    font-family: a;
+    padding: 10vw 10vw;
+}
+#page13>h1{
+    font-size: 5vw;
+    line-height: 1;
+    font-weight: 100;
+}
+#page13>button{
+    padding: 10px 30px;
+    color: white;
+    background-color: #002bff;
+    border: none;
+    border-radius: 50px;
+    margin-top: 2vw;
+}
+#page14{
+    position: relative;
+    height: 50vh;
+    width: 100vw;
+    background-color:black;
+    font-family: a;
+}
+
+#page14{
+    position: relative;
+    height: 60vh;
+    width: 100vw;
+    background-color: #000;
+}
+.page14-inner{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0vw 5vw;
+    font-family: a;
+    height: 33.3%;
+    width: 100%;
+    color: #fff;
+    border-top: .5px solid #ffffff5c;
+    border-bottom: .5px solid #ffffff48;
+}
+.page14-inner>i{
+    font-weight: 100;
+    font-size: 2.4vw;
+    position: relative;
+    z-index: 9999;
+}
+.page14-inner>h1{
+    font-size: 3vw;
+    font-weight: 100;
+    position: relative;
+    z-index: 9999;
+}
+
+.center14{
+    height: 0%;
+    width: 100%;
+    background-color: #0a3cce;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    transition: all ease .5s;
+}
+
+
+.page14-inner:hover .center14{
+    height: 100%;
+}
